syntax = "proto3";

package obd.v1;
import "obd/v1/car/entity.proto";



message BrandsListRequest {}
    
message BrandsListRow {
    int32 car_brand_id = 1;
    string name = 2;
    repeated CarBrandModel models = 3;
}


message BrandsListResponse {
    repeated BrandsListRow brands = 1;
}